--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,42 @@
-version: '3'
+version: "3"
 
 services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx
+  sonarqube:
+    image: sonarqube
+    expose:
+      - 9000
     ports:
-      - 81:81
-    volumes:
-      - /opt/nginx/yourhost.xyz.key:/etc/nginx/yourhost.xyz.key:ro
-      - /opt/nginx/yourhost.xyz.crt:/etc/nginx/yourhost.xyz.crt:ro
-      - /opt/nginx/sonarqube.conf:/etc/nginx/conf.d/sonarqube.conf:z
+      - "127.0.0.1:9000:9000"
     networks:
       - sonarnet
-    restart: always
+    environment:
+      - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONARQUBE_JDBC_USERNAME=sonar
+      - SONARQUBE_JDBC_PASSWORD=sonar
+    volumes:
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
 
-  database:
-    image: postgres:10
-    container_name: postgresql
+  db:
+    image: postgres
     networks:
       - sonarnet
     environment:
       - POSTGRES_USER=sonar
       - POSTGRES_PASSWORD=sonar
-      - POSTGRES_DB=sonarqube
     volumes:
-      - /opt/postgresql:/var/lib/postgresql:z
-      - /opt/postgresql/data:/var/lib/postgresql/data:z
-
-  sonarqube:
-    image: sonarqube:latest
-    container_name: sonarqube
-    hostname: sonarqube
-    networks:
-      - sonarnet
-    depends_on:
-      - database
-    ports:
-      - 9000:9000
-    environment:
-      - sonar.jdbc.url=jdbc:postgresql://database:5432/sonarqube
-    volumes:
-      - /opt/sonarqube/conf:/opt/sonarqube/conf:z
-      - /opt/sonarqube/extensions/plugins:/opt/sonarqube/extensions/plugins:z
-      - /opt/sonarqube/extensions/downloads:/opt/sonarqube/extensions/downloads:z
-      - /opt/sonarqube/data:/opt/sonarqube/data:z
+      - postgresql:/var/lib/postgresql
+      - postgresql_data:/var/lib/postgresql/data
 
 networks:
   sonarnet:
-    driver: bridge
+
+volumes:
+  sonarqube_conf:
+  sonarqube_data:
+  sonarqube_extensions:
+  sonarqube_bundled-plugins:
+  postgresql:
+  postgresql_data:
